// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@atlaskit/page-header should render correctly 1`] = `
<div>
  <style
    data-cmpld="true"
  >REDACTED</style>
  <div
    class="REDACTED"
  >
    <div>
      Breadcrumb
    </div>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <div
      class="REDACTED"
    >
      <style
        data-cmpld="true"
      >REDACTED</style>
      <div
        class="REDACTED"
      >
        <style
          data-cmpld="true"
        >REDACTED</style>
        <h1
          class="REDACTED"
          tabindex="-1"
        >
          Test
        </h1>
      </div>
      <style
        data-cmpld="true"
      >REDACTED</style>
      <div
        class="REDACTED"
      >
        <div>
          Action
        </div>
      </div>
    </div>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <div
      class="REDACTED"
    >
       
      <div>
        Bar
      </div>
       
    </div>
  </div>
</div>
`;

exports[`@atlaskit/page-header should render correctly with disableTitleStyles prop 1`] = `
<div>
  <style
    data-cmpld="true"
  >REDACTED</style>
  <div
    class="REDACTED"
  >
    <div>
      Breadcrumb
    </div>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <div
      class="REDACTED"
    >
      <style
        data-cmpld="true"
      >REDACTED</style>
      <div
        class="REDACTED"
      >
        Test
      </div>
      <style
        data-cmpld="true"
      >REDACTED</style>
      <div
        class="REDACTED"
      >
        <div>
          Action
        </div>
      </div>
    </div>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <style
      data-cmpld="true"
    >REDACTED</style>
    <div
      class="REDACTED"
    >
       
      <div>
        Bar
      </div>
       
    </div>
  </div>
</div>
`;
